Fixing index alignment

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,5 +1,8 @@
-.navbar .navbar-brand {
-  max-width: 470px;
+.logo-header {
+  max-width: 230px;
+  max-height: 50px;
+  width: auto;
+  height: auto;
 }
 
 @media (max-width: 600px) {
@@ -14,5 +17,18 @@
   left: unset;
   top: 1.7rem;
   outline: none !important;
+}
 
+.btn-black-header {
+  background-color: #333333 !important;
+  color: #fff !important;
+  border-radius: 0 !important;
+  width: 180px;
+  height: 35px;
+  /* width: auto; */
+  /* height: auto; */
+}
+
+.btn-black:focus {
+  outline-color: #a7a7a7;
 }
